Branch to work on issue 4925.
git-svn-id: http://argouml.tigris.org/svn/argouml/branches/work_issue4925_mvw@13858 a161b567-7d1e-0410-9ef9-912c70fedb3f