@@ -301,13 +301,13 @@ public final class NotationProviderFactory2 {
     private Class getNotationProviderClass(int type, NotationName name) {
         if (allLanguages.containsKey(name)) {
             Map<Integer, Class> t = allLanguages.get(name);
-            if (t.containsKey(new Integer(type))) {
-                return t.get(new Integer(type));
+            if (t.containsKey(Integer.valueOf(type))) {
+                return t.get(Integer.valueOf(type));
             }
         }
         Map<Integer, Class> t = allLanguages.get(defaultLanguage);
-        if (t != null && t.containsKey(new Integer(type))) {
-            return t.get(new Integer(type));
+        if (t != null && t.containsKey(Integer.valueOf(type))) {
+            return t.get(Integer.valueOf(type));
         }
         return null;
     }
@@ -321,10 +321,10 @@ public final class NotationProviderFactory2 {
             NotationName notationName, Class provider) {
         if (allLanguages.containsKey(notationName)) {
             Map<Integer, Class> t = allLanguages.get(notationName);
-            t.put(new Integer(type), provider);
+            t.put(Integer.valueOf(type), provider);
         } else {
             Map<Integer, Class> t = new HashMap<Integer, Class>();
-            t.put(new Integer(type), provider);
+            t.put(Integer.valueOf(type), provider);
             allLanguages.put(notationName, t);
         }
     }
