@@ -27,11 +27,10 @@ package org.argouml.notation.providers.uml;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
-import java.util.Vector;
 
 import org.apache.log4j.Logger;
 import org.argouml.application.events.ArgoEventPump;
@@ -43,6 +42,7 @@ import org.argouml.kernel.ProjectManager;
 import org.argouml.kernel.ProjectSettings;
 import org.argouml.model.Model;
 import org.argouml.notation.providers.MessageNotation;
+import org.argouml.util.CustomSeparator;
 import org.argouml.util.MyTokenizer;
 
 /**
@@ -88,9 +88,9 @@ public class MessageNotationUml extends MessageNotation {
         Logger.getLogger(MessageNotationUml.class);
 
     /**
-     * The vector of CustomSeparators to use when tokenizing parameters.
+     * The list of CustomSeparators to use when tokenizing parameters.
      */
-    private Vector parameterCustomSep;
+    private final List<CustomSeparator> parameterCustomSep;
 
     /**
      * The constructor.
@@ -99,7 +99,7 @@ public class MessageNotationUml extends MessageNotation {
      */
     public MessageNotationUml(Object message) {
         super(message);
-        parameterCustomSep = new Vector();
+        parameterCustomSep = new ArrayList<CustomSeparator>();
         parameterCustomSep.add(MyTokenizer.SINGLE_QUOTED_SEPARATOR);
         parameterCustomSep.add(MyTokenizer.DOUBLE_QUOTED_SEPARATOR);
         parameterCustomSep.add(MyTokenizer.PAREN_EXPR_STRING_SEPARATOR);
@@ -108,13 +108,13 @@ public class MessageNotationUml extends MessageNotation {
     /*
      * @see org.argouml.notation.providers.NotationProvider#parse(java.lang.Object, java.lang.String)
      */
-    public void parse(Object modelElement, String text) {
+    public void parse(final Object modelElement, final String text) {
         try {
             parseMessage(modelElement, text);
         } catch (ParseException pe) {
-            String msg = "statusmsg.bar.error.parsing.message";
-            Object[] args = {pe.getLocalizedMessage(),
-                new Integer(pe.getErrorOffset()), };
+            final String msg = "statusmsg.bar.error.parsing.message";
+            final Object[] args = {pe.getLocalizedMessage(),
+                Integer.valueOf(pe.getErrorOffset()), };
             ArgoEventPump.fireEvent(new ArgoHelpEvent(
                     ArgoEventTypes.HELP_CHANGED, this,
                     Translator.messageFormat(msg, args)));
@@ -132,9 +132,9 @@ public class MessageNotationUml extends MessageNotation {
      * Generates a textual description for a Message m.
      *
      * @see org.argouml.notation.providers.NotationProvider#toString(java.lang.Object, 
-     * java.util.HashMap)
+     * java.util.Map)
      */
-    public String toString(Object modelElement, HashMap args) {
+    public String toString(final Object modelElement, final Map args) {
         Iterator it;
         Collection pre;
         Object act;
@@ -143,7 +143,7 @@ public class MessageNotationUml extends MessageNotation {
 
         String action = "";
         String number;
-        String predecessors = "";
+        StringBuilder predecessors = new StringBuilder();
         int lpn;
 
         if (modelElement == null) {
@@ -173,14 +173,15 @@ public class MessageNotationUml extends MessageNotation {
                 }
 
                 if (predecessors.length() > 0) {
-                    predecessors += ", ";
+                    predecessors.append(", ");
                 }
-                predecessors += generateMessageNumber(msg, ptr2.message, mpn);
+                predecessors.append(
+                        generateMessageNumber(msg, ptr2.message, mpn));
                 precnt++;
             }
 
             if (precnt > 0) {
-                predecessors += " / ";
+                predecessors.append(" / ");
             }
         }
 
@@ -343,7 +344,7 @@ public class MessageNotationUml extends MessageNotation {
         Collection arguments;
         Iterator it;
         String s;
-        String p;
+        StringBuilder p;
         boolean first;
 
         Object script = Model.getFacade().getScript(theAction);
@@ -354,7 +355,7 @@ public class MessageNotationUml extends MessageNotation {
             s = "";
         }
 
-        p = "";
+        p = new StringBuilder();
         arguments = Model.getFacade().getActualArguments(theAction);
         if (arguments != null) {
             it = arguments.iterator();
@@ -362,11 +363,12 @@ public class MessageNotationUml extends MessageNotation {
             while (it.hasNext()) {
                 Object arg = it.next();
                 if (!first) {
-                    p += ", ";
+                    p.append(", ");
                 }
 
                 if (Model.getFacade().getValue(arg) != null) {
-                    p += generateExpression(Model.getFacade().getValue(arg));
+                    p.append(generateExpression(
+                            Model.getFacade().getValue(arg)));
                 }
                 first = false;
             }
@@ -385,7 +387,7 @@ public class MessageNotationUml extends MessageNotation {
             return s;
         }
 
-        return s + " (" + p + ")";
+        return s + " (" + p.toString() + ")";
     }
 
     private String generateExpression(Object expr) {
@@ -453,14 +455,14 @@ public class MessageNotationUml extends MessageNotation {
      */
     protected void parseMessage(Object mes, String s) throws ParseException {
         String fname = null;
-        String guard = null;
+        StringBuilder guard = null;
         String paramExpr = null;
         String token;
-        String varname = null;
-        Vector predecessors = new Vector();
-        Vector seqno = null;
-        Vector currentseq = new Vector();
-        Vector args = null;
+        StringBuilder varname = null;
+        List<List> predecessors = new ArrayList<List>();
+        List seqno = null;
+        List currentseq = new ArrayList();
+        List args = null;
         boolean mustBePre = false;
         boolean mustBeSeq = false;
         boolean parallell = false;
@@ -483,7 +485,7 @@ public class MessageNotationUml extends MessageNotation {
                 if (" ".equals(token) || "\t".equals(token)) {
                     if (currentseq == null) {
                         if (varname != null && fname == null) {
-                            varname += token;
+                            varname.append(token);
                         }
                     }
                 } else if ("[".equals(token)) {
@@ -500,13 +502,13 @@ public class MessageNotationUml extends MessageNotation {
                                 st.getTokenIndex());
                     }
 
-                    guard = "";
+                    guard = new StringBuilder();
                     while (true) {
                         token = st.nextToken();
                         if ("]".equals(token)) {
                             break;
                         }
-                        guard += token;
+                        guard.append(token);
                     }
                 } else if ("*".equals(token)) {
                     if (mustBePre) {
@@ -589,7 +591,7 @@ public class MessageNotationUml extends MessageNotation {
 
                         predecessors.add(currentseq);
 
-                        currentseq = new Vector();
+                        currentseq = new ArrayList();
                         currentseq.add(null);
                         currentseq.add(null);
                     }
@@ -627,17 +629,17 @@ public class MessageNotationUml extends MessageNotation {
 
                             predecessors.add(currentseq);
 
-                            currentseq = new Vector();
+                            currentseq = new ArrayList();
                             currentseq.add(null);
                             currentseq.add(null);
                         }
                         hasPredecessors = true;
                     } else {
                         if (varname == null && fname != null) {
-                            varname = fname + token;
+                            varname = new StringBuilder(fname + token);
                             fname = null;
                         } else if (varname != null && fname == null) {
-                            varname += token;
+                            varname.append(token);
                         } else {
                             String msg = "parsing.error.message.found-comma";
                             throw new ParseException(
@@ -648,7 +650,7 @@ public class MessageNotationUml extends MessageNotation {
                 } else if ("=".equals(token) || ":=".equals(token)) {
                     if (currentseq == null) {
                         if (varname == null) {
-                            varname = fname;
+                            varname = new StringBuilder(fname);
                             fname = "";
                         } else {
                             fname = "";
@@ -669,11 +671,11 @@ public class MessageNotationUml extends MessageNotation {
                                     st.getTokenIndex());
                         }
                         if (varname == null) {
-                            varname = "";
+                            varname = new StringBuilder();
                         }
                         paramExpr = token.substring(1, token.length() - 1);
                     } else if (varname != null && fname == null) {
-                        varname += token;
+                        varname.append(token);
                     } else if (fname == null || fname.length() == 0) {
                         fname = token;
                     } else {
@@ -693,7 +695,7 @@ public class MessageNotationUml extends MessageNotation {
 
                     if (!hasVal && !assigned && bp == token.length()) {
                         try {
-                            currentseq.set(currentseq.size() - 2, new Integer(
+                            currentseq.set(currentseq.size() - 2, Integer.valueOf(
                                     token));
                             assigned = true;
                         } catch (NumberFormatException nfe) { }
@@ -701,7 +703,7 @@ public class MessageNotationUml extends MessageNotation {
 
                     if (!hasOrd && !assigned && bp == 0) {
                         try {
-                            currentseq.set(currentseq.size() - 1, new Integer(
+                            currentseq.set(currentseq.size() - 1, Integer.valueOf(
                                     parseMsgOrder(token)));
                             assigned = true;
                         } catch (NumberFormatException nfe) { }
@@ -711,8 +713,8 @@ public class MessageNotationUml extends MessageNotation {
                             && bp < token.length()) {
                         Integer nbr, ord;
                         try {
-                            nbr = new Integer(token.substring(0, bp));
-                            ord = new Integer(
+                            nbr = Integer.valueOf(token.substring(0, bp));
+                            ord = Integer.valueOf(
                                     parseMsgOrder(token.substring(bp)));
                             currentseq.set(currentseq.size() - 2, nbr);
                             currentseq.set(currentseq.size() - 1, ord);
@@ -739,7 +741,7 @@ public class MessageNotationUml extends MessageNotation {
         if (paramExpr != null) {
             MyTokenizer st = new MyTokenizer(paramExpr, "\\,",
                     parameterCustomSep);
-            args = new Vector();
+            args = new ArrayList();
             while (st.hasMoreTokens()) {
                 token = st.nextToken();
 
@@ -765,7 +767,7 @@ public class MessageNotationUml extends MessageNotation {
                 }
             }
         } else if (mayDeleteExpr) {
-            args = new Vector();
+            args = new ArrayList();
         }
 
         if (LOG.isDebugEnabled()) {
@@ -782,7 +784,7 @@ public class MessageNotationUml extends MessageNotation {
             buf.append("predecessors: " + predecessors.size() + "\n");
             for (i = 0; i < predecessors.size(); i++) {
                 int j;
-                Vector v = (Vector) predecessors.get(i);
+                List v = predecessors.get(i);
                 buf.append("    Predecessor: ");
                 for (j = 0; v != null && j + 1 < v.size(); j += 2) {
                     if (j > 0) {
@@ -807,12 +809,12 @@ public class MessageNotationUml extends MessageNotation {
         }
 
         if (guard != null) {
-            guard = "[" + guard.trim() + "]";
+            guard = new StringBuilder("[" + guard.toString().trim() + "]");
             if (iterative) {
                 if (parallell) {
-                    guard = "*//" + guard;
+                    guard = guard.insert(0, "*//");
                 } else {
-                    guard = "*" + guard;
+                    guard = guard.insert(0, "*");
                 }
             }
             Project project =
@@ -820,7 +822,7 @@ public class MessageNotationUml extends MessageNotation {
             ProjectSettings ps = project.getProjectSettings();
             Object expr =
                 Model.getDataTypesFactory().createIterationExpression(
-                        ps.getNotationLanguage(), guard);
+                        ps.getNotationLanguage(), guard.toString());
             Model.getCommonBehaviorHelper().setRecurrence(
                     Model.getFacade().getAction(mes), expr);
         }
@@ -867,12 +869,12 @@ public class MessageNotationUml extends MessageNotation {
                 }
 
                 if (idx >= 0) {
-                    varname = body.substring(0, idx);
+                    varname = new StringBuilder(body.substring(0, idx));
                 } else {
-                    varname = "";
+                    varname = new StringBuilder();
                 }
             } else {
-                varname = "";
+                varname = new StringBuilder();
             }
         }
 
@@ -883,7 +885,7 @@ public class MessageNotationUml extends MessageNotation {
         if (fname != null) {
             String expr = fname.trim();
             if (varname.length() > 0) {
-                expr = varname.trim() + " := " + expr;
+                expr = varname.toString().trim() + " := " + expr;
             }
 
             if (Model.getFacade().getScript(
@@ -942,8 +944,8 @@ public class MessageNotationUml extends MessageNotation {
             Object/* MMessage */root;
             // Find the preceding message, if any, on either end of the
             // association.
-            String pname = "";
-            String mname = "";
+            StringBuilder pname = new StringBuilder();
+            StringBuilder mname = new StringBuilder();
             String gname = generateMessageNumber(mes);
             boolean swapRoles = false;
             int majval = 0;
@@ -972,23 +974,23 @@ public class MessageNotationUml extends MessageNotation {
                 }
 
                 if (i > 0) {
-                    mname += ".";
+                    mname.append(".");
                 }
-                mname += Integer.toString(bv) + (char) ('a' + sv);
+                mname.append(Integer.toString(bv) + (char) ('a' + sv));
 
                 if (i + 3 < seqno.size()) {
                     if (i > 0) {
-                        pname += ".";
+                        pname.append(".");
                     }
-                    pname += Integer.toString(bv) + (char) ('a' + sv);
+                    pname.append(Integer.toString(bv) + (char) ('a' + sv));
                 }
             }
 
             root = null;
             if (pname.length() > 0) {
-                root = findMsg(Model.getFacade().getSender(mes), pname);
+                root = findMsg(Model.getFacade().getSender(mes), pname.toString());
                 if (root == null) {
-                    root = findMsg(Model.getFacade().getReceiver(mes), pname);
+                    root = findMsg(Model.getFacade().getReceiver(mes), pname.toString());
                     if (root != null) {
                         swapRoles = true;
                     }
@@ -1000,9 +1002,9 @@ public class MessageNotationUml extends MessageNotation {
                 swapRoles = true;
             }
 
-            if (compareMsgNumbers(mname, gname)) {
+            if (compareMsgNumbers(mname.toString(), gname.toString())) {
                 // Do nothing
-            } else if (isMsgNumberStartOf(gname, mname)) {
+            } else if (isMsgNumberStartOf(gname.toString(), mname.toString())) {
             	String msg = "parsing.error.message.subtree-rooted-self";
                 throw new ParseException(Translator.localize(msg), 0);
             } else if (Model.getFacade().getPredecessors(mes).size() > 1
@@ -1094,7 +1096,7 @@ public class MessageNotationUml extends MessageNotation {
 
         if (fname != null && refindOperation) {
             Object role = Model.getFacade().getReceiver(mes);
-            Vector ops =
+            List ops =
                 getOperation(
                         Model.getFacade().getBases(role),
                         fname.trim(),
@@ -1129,14 +1131,14 @@ public class MessageNotationUml extends MessageNotation {
                                 Model.getFacade().getInteraction(mes)),
                         null,
                         null);
-            Vector pre = new Vector();
+            List pre = new ArrayList();
             Iterator it;
         predfor:
             for (i = 0; i < predecessors.size(); i++) {
                 it = roots.iterator();
                 while (it.hasNext()) {
                     Object msg =
-                        walkTree(it.next(), (Vector) predecessors.get(i));
+                        walkTree(it.next(), predecessors.get(i));
                     if (msg != null && msg != mes) {
                         if (isBadPreMsg(mes, msg)) {
                             String parseMsg = "parsing.error.message.one-pred";
@@ -1168,7 +1170,7 @@ public class MessageNotationUml extends MessageNotation {
      * @param path The path to walk in the call tree.
      * @return The message at the end of path, or <code>null</code>.
      */
-    private Object walkTree(Object root, Vector path) {
+    private Object walkTree(Object root, List path) {
         int i;
         for (i = 0; i + 1 < path.size(); i += 2) {
             int bv = 0;
@@ -1509,13 +1511,13 @@ public class MessageNotationUml extends MessageNotation {
      *            MMessage
      */
     private void insertSuccessor(Object m, Object s, int p) {
-        Vector v = new Vector(Model.getFacade().getSuccessors(m));
-        if (v.size() > p) {
-            v.insertElementAt(s, p);
+        List successors = new ArrayList(Model.getFacade().getSuccessors(m));
+        if (successors.size() > p) {
+            successors.add(p, s);
         } else {
-            v.add(s);
+            successors.add(s);
         }
-        Model.getCollaborationsHelper().setSuccessors(m, v);
+        Model.getCollaborationsHelper().setSuccessors(m, successors);
     }
 
     /**
@@ -1528,8 +1530,8 @@ public class MessageNotationUml extends MessageNotation {
      * @param params the number of parameters of the operation to be found
      * @return the sought operation
      */
-    private Vector getOperation(Collection c, String name, int params) {
-        Vector options = new Vector();
+    private List getOperation(Collection c, String name, int params) {
+        List options = new ArrayList();
         Iterator it;
 
         if (name == null || name.length() == 0) {
@@ -1563,15 +1565,15 @@ public class MessageNotationUml extends MessageNotation {
 
         it = c.iterator();
         if (it.hasNext()) {
-            String expr = name + "(";
+            StringBuilder expr = new StringBuilder(name + "(");
             int i;
             for (i = 0; i < params; i++) {
                 if (i > 0) {
-                    expr += ", ";
+                    expr.append(", ");
                 }
-                expr += "param" + (i + 1);
+                expr.append("param" + (i + 1));
             }
-            expr += ")";
+            expr.append(")");
             // Jaap Branderhorst 2002-23-09 added next lines to link
             // parameters and operations to the figs that represent
             // them
@@ -1582,7 +1584,8 @@ public class MessageNotationUml extends MessageNotation {
             Object op = Model.getCoreFactory().buildOperation(cls, returnType);
 
             try {
-                (new OperationNotationUml(op)).parseOperation(expr, op);
+                (new OperationNotationUml(op)).parseOperation(
+                        expr.toString(), op);
             } catch (ParseException pe) {
                 LOG.error("Unexpected ParseException in getOperation: " + pe,
                         pe);
@@ -1597,18 +1600,12 @@ public class MessageNotationUml extends MessageNotation {
      * Counts the number of parameters that are not return values.
      */
     private int countParameters(Object bf) {
-        Collection c = Model.getFacade().getParameters(bf);
-        Iterator it = c.iterator();
         int count = 0;
-
-        while (it.hasNext()) {
-            Object p = it.next();
-            if (Model.getFacade().isReturn(p)) {
-                continue;
+        for (Object parameter : Model.getFacade().getParameters(bf)) {
+            if (!Model.getFacade().isReturn(parameter)) {
+                count++;
             }
-            count++;
         }
-
         return count;
     }
 
