@@ -26,7 +26,7 @@ package org.argouml.notation.providers.uml;
 
 import java.text.ParseException;
 import java.util.Collection;
-import java.util.HashMap;
+import java.util.Map;
 import java.util.Iterator;
 import java.util.Stack;
 
@@ -69,7 +69,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
             String msg = "statusmsg.bar.error.parsing.node-modelelement";
             Object[] args = {
                 pe.getLocalizedMessage(),
-                new Integer(pe.getErrorOffset()),
+                Integer.valueOf(pe.getErrorOffset()),
             };
             ArgoEventPump.fireEvent(new ArgoHelpEvent(
                     ArgoEventTypes.HELP_CHANGED, this,
@@ -85,9 +85,9 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
     }
 
     /*
-     * @see org.argouml.notation.providers.NotationProvider#toString(java.lang.Object, java.util.HashMap)
+     * @see org.argouml.notation.providers.NotationProvider#toString(java.lang.Object, java.util.Map)
      */
-    public String toString(Object modelElement, HashMap args) {
+    public String toString(Object modelElement, Map args) {
         String name = Model.getFacade().getName(modelElement);
         StringBuffer sb = new StringBuffer("");
         if (isValue("fullyHandleStereotypes", args)) {
@@ -108,7 +108,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
      * @param args arguments that influence the generation
      * @return a string which represents the stereotypes
      */
-    protected String generateStereotypes(Object modelElement, HashMap args) {
+    protected String generateStereotypes(Object modelElement, Map args) {
         Collection c = Model.getFacade().getStereotypes(modelElement);
         StringBuffer sb = new StringBuffer(50);
         Iterator i = c.iterator();
@@ -136,8 +136,8 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
      * @param args arguments that influence the generation
      * @return a string which represents the path
      */
-    protected String generatePath(Object modelElement, HashMap args) {
-        String s = "";
+    protected String generatePath(Object modelElement, Map args) {
+        StringBuilder s = new StringBuilder();
         if (isValue("pathVisible", args)) {
             Object p = modelElement;
             Stack stack = new Stack();
@@ -147,14 +147,14 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
                 ns = Model.getFacade().getNamespace(ns);
             }
             while (!stack.isEmpty()) {
-                s += (String) stack.pop() + "::";
+                s.append((String) stack.pop() + "::");
             }
 
-            if (s.length() > 0 && !s.endsWith(":")) {
-                s += "::";
+            if (s.length() > 0 && !(s.lastIndexOf(":") == s.length() - 1)) {
+                s.append("::");
             }
         }
-        return s;
+        return s.toString();
     }
 
     /**
@@ -162,7 +162,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
      * @param args arguments that influence the generation
      * @return a string representing the visibility
      */
-    protected String generateVisibility(Object modelElement, HashMap args) {
+    protected String generateVisibility(Object modelElement, Map args) {
         String s = "";
         if (isValue("visibilityVisible", args)) {
             Object v = Model.getFacade().getVisibility(modelElement);
@@ -175,8 +175,7 @@ public class ModelElementNameNotationUml extends ModelElementNameNotation {
             s = NotationUtilityUml.generateVisibility(v);
             if (s.length() > 0) {
                 s = s + " ";
-            }
-            /* This for when nothing is generated: omit the space. */
+            }            
         }
         return s;
     }
